public/Css/main.css
/* universal star operator */
*,
*::before,
*::after {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

/* css root variables */
:root {
	--red: #E51400;
	--green: #008A00;
	--linked-in: #0077B5;
	--soft-white: #f1f1f1;
	--soft-background: #001A4B;
	--main-background: #00052A;
}

/* Html and Body Tag */
html {
	font-size: 62.5%;
}

body {
	width: 100vw;
	height: auto;
	min-height: 100vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	font-family: 'Poppins', sans-serif;
	background: linear-gradient(129deg, var(--soft-background), var(--main-background) 35%);
	overflow-x: hidden;
	position: relative;
}

/* Page Header */
.header {
	width: 100%;
}

.header-icon {
	width: 5rem;
	height: 5rem;
	border: 0.2rem solid #0077B5;
	border-radius: 50%;
	object-fit: cover;
	margin: 1rem 0 0 1rem;
	z-index: 15;
}

.header-icon-head {
	color: var(--soft-white);
	font-size: 1.2rem;
	position: absolute;
	top: 7rem;
	left: 1rem;
}

.header-border {
	width: 25rem;
	height: 20rem;
	object-fit: cover;
	position: absolute;
	top: 0;
	right: 0;
}

/* Hero Section */
.hero {
	width: 100%;
	margin-top: 7rem;
	display: flex;
	flex-direction: column;
}

.hero .main-temp {
	font-size: 15rem;
	margin: 1rem;
	color: var(--soft-white);
	font-family: 'Langar', cursive;
}

.hero .main-temp-child {
	font-size: 5rem;
	margin: 1rem 0 0 -1rem;
	color: var(--soft-white);
	font-family: 'Langar', cursive;
}

.hero-temp-child {
	font-size: 1.2rem;
	font-weight: bold;
	color: var(--soft-white);
	font-family: 'Langar', cursive;
	letter-spacing: 0.2rem;
	display: flex;
	flex-direction: column;
	position: absolute;
	top: 50%;
	right: 0;
	padding: 1rem;
	background: var(--soft-background);
	border-radius: 1rem 0 0 1rem;
}

.hero-temp-grandChild {
	margin-left: auto;
}

/* Country Name */
.hero .cp-container {
	color: var(--soft-white);
	font-weight: bold;
	font-size: 3rem;
	margin: -4rem 0 0 1rem;
}

/* Page Country Search Form */
.form {
	width: 100%;
	margin: 7rem auto 1rem auto;
	display: flex;
	justify-content: space-between;
}

/* Form TextArea */
.text-area {
	width: 75vw;
	height: 5rem;
	margin: 0 1rem;
	padding: 1rem;
	font-size: 1.5rem;
	letter-spacing: 0.2rem;
	border: 0.3rem solid #fff;
	border-radius: 5rem;
	font-weight: bold;
}
.form .text-area:focus {
	outline: 0;
}
.error-input {
	width: 75vw;
	height: 5rem;
	margin: 0 1rem;
	padding: 1rem;
	letter-spacing: 0.2rem;
	border-radius: 5rem;
	font-weight: bold;
	border: 0.3rem solid var(--red);
}
.error-input:focus {
	outline: 0;
}
.error-input::placeholder {
	color: var(--red);
	opacity: 0.5;
}

/* Form Submit Button */
.form .form-button {
	width: 5rem;
	height: 5rem;
	margin: 0 1rem;
	border-radius: 50%;
	border: none;
	outline: 0;
}

